--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,6 +25,9 @@ h1 {
     top: 50%;
     transform: translateY(-50%);
     height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 h1 span {
