--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,6 +40,19 @@ h1 img {
     vertical-align: middle;
 }
 
+section {
+    position: relative;
+}
+
+
+
+section img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -76,9 +89,3 @@ nav ul li a:hover {
     color: rgb(239, 166, 0);
 }
 
-section img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    object-position: center;
-}
