--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,13 +44,18 @@ section {
     position: relative;
 }
 
-
-
 section img {
     width: 100%;
     height: 300px;
     object-fit: cover;
     object-position: center;
+}
+
+nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
 }
 
 nav ul {
