--- a/estilos/style.css
+++ b/estilos/style.css
@@ -64,7 +64,7 @@ nav ul {
 }
 
 nav ul {
-    background-color: rgb(230, 44, 41);
+    background-color: rgba(237, 45, 42, 0.7);
     display: flex;
     justify-content: center;
     padding: 0;
