--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,7 +46,7 @@ section {
 
 section img {
     width: 100%;
-    height: 300px;
+    height: 250px;
     object-fit: cover;
     object-position: center;
 }
@@ -94,3 +94,7 @@ nav ul li a:hover {
     color: rgb(239, 166, 0);
 }
 
+#sobre {
+   display: flex;     
+   
+}
