--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -49,6 +49,7 @@ section img {
     height: 250px;
     object-fit: cover;
     object-position: center;
+    display: block;
 }
 
 nav {
@@ -96,5 +97,13 @@ nav ul li a:hover {
 
 #sobre {
    display: flex;     
-   
+   justify-content: flex-start;
+   padding-left: 10px;
+   margin-top: 0px;
+   background-color: rgba(230, 44, 41);
+   width: 10%;
+}
+
+#sobre h2 {
+    margin: 0;
 }
