--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,47 @@
 @charset "UTF-8";
 
+/* Paleta de Cores:
+
+rgba(239, 167, 0, 0.452) - amarelo
+rgb(239, 166, 0) - amarelo forte 
+rgba(237, 45, 42, 0.7) - vermelho
+rgb(255, 94, 77) - vermelho fraco
+rgba(230, 44, 41, 0.525) - vermelho forte
+
+*/
+
 * {
     margin: 0;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-color: blanchedalmond;
+    overflow-x: hidden;
+}
+
+.baskervville-regular {
+    font-family: "Baskervville", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.baskervville-regular-italic {
+    font-family: "Baskervville", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.dancing-script {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+}
+
 h1 {
-    background-color: rgb(239, 166, 0);
+    background-color: rgba(239, 167, 0, 0.452);
     font-size: 2.2em;
     display: flex;
     align-items: center;
@@ -16,7 +50,7 @@ h1 {
     gap: 10px;
     padding: 10px 20px;
     position: relative;
-    height: 60px;
+    height: 30px;
 }
 
 .logo {
@@ -24,8 +58,8 @@ h1 {
     left: 5px;
     top: 50%;
     transform: translateY(-50%);
-    height: 60px;
-    width: 60px;
+    height: 45px;
+    width: 45px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -48,12 +82,13 @@ section img {
     width: 100%;
     height: 250px;
     object-fit: cover;
-    object-position: center;
+    object-position: center 50%;
     display: block;
+    position: relative;
 }
 
 nav {
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translateX(-50%);
     z-index: 10;
@@ -65,11 +100,11 @@ nav ul {
 }
 
 nav ul {
-    background-color: rgba(237, 45, 42, 0.7);
+    background-color: rgba(239, 167, 0, 0.452);
     display: flex;
     justify-content: center;
     padding: 0;
-    border-radius: 10px;
+    border-radius: 5px;
     width: fit-content;
     margin: auto;
 }
@@ -96,14 +131,34 @@ nav ul li a:hover {
 }
 
 #sobre {
-   display: flex;     
-   justify-content: flex-start;
-   padding-left: 10px;
-   margin-top: 0px;
-   background-color: rgba(230, 44, 41);
-   width: 10%;
+   display: block;
+   margin: 0 auto;
+   /padding-left: 10px;/
+   background-color: rgba(230, 44, 41, 0.525);
+   width: 100%;
+   height: 50px;
+   text-align: center;
+   
 }
 
 #sobre h2 {
-    margin: 0;
+    margin-bottom: 20px;
+    font-size: 1.8em;
+    text-align: center;
+}
+
+#sobre p {
+    text-align: justify;
+    line-height: 1.5;
+}
+
+.sobre-conteudo {
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: justify;
+}
+
+.sobre-conteudo p {
+    margin-bottom: 15px;
+    line-height: 1.5;
 }
