--- a/estilos/style.css
+++ b/estilos/style.css
@@ -133,18 +133,16 @@ nav ul li a:hover {
 #sobre {
    display: block;
    margin: 0 auto;
-   /padding-left: 10px;/
-   background-color: rgba(230, 44, 41, 0.525);
-   width: 100%;
-   height: 50px;
-   text-align: center;
-   
+   padding-left: 10px;/ 
 }
 
 #sobre h2 {
     margin-bottom: 20px;
     font-size: 1.8em;
     text-align: center;
+    background-color: rgba(230, 44, 41, 0.525);
+    width: 100%;
+    height: 33px;
 }
 
 #sobre p {
