--- a/estilos/style.css
+++ b/estilos/style.css
@@ -133,7 +133,7 @@ nav ul li a:hover {
 #sobre {
    display: block;
    margin: 0 auto;
-   padding-left: 10px;/ 
+   padding-left: 0px;
 }
 
 #sobre h2 {
@@ -141,8 +141,9 @@ nav ul li a:hover {
     font-size: 1.8em;
     text-align: center;
     background-color: rgba(230, 44, 41, 0.525);
-    width: 100%;
+    width: 50%;
     height: 33px;
+    display: block;
 }
 
 #sobre p {
