--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,45 +1,29 @@
 @charset "UTF-8";
-
-/* Paleta de Cores:
-
-rgba(239, 167, 0, 0.452) - amarelo
-rgb(239, 166, 0) - amarelo forte 
-rgba(237, 45, 42, 0.7) - vermelho
-rgb(255, 94, 77) - vermelho fraco
-rgba(230, 44, 41, 0.525) - vermelho forte
-
-*/
-
 * {
     margin: 0;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 body {
     background-color: blanchedalmond;
     overflow-x: hidden;
 }
-
 .baskervville-regular {
     font-family: "Baskervville", serif;
     font-weight: 400;
     font-style: normal;
-}
-  
+} 
 .baskervville-regular-italic {
     font-family: "Baskervville", serif;
     font-weight: 400;
     font-style: italic;
 }
-
 .dancing-script {
     font-family: "Dancing Script", cursive;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
 }
-
 h1 {
     background-color: rgba(239, 167, 0, 0.452);
     font-size: 2.2em;
@@ -52,7 +36,6 @@ h1 {
     position: relative;
     height: 30px;
 }
-
 .logo {
     position: absolute;
     left: 5px;
@@ -63,21 +46,17 @@ h1 {
     border-radius: 50%;
     object-fit: cover;
 }
-
 h1 span {
     display: inline-block;
     vertical-align: middle;
 }
-
 h1 img {
     height: 50px;
     vertical-align: middle;
 }
-
 section {
     position: relative;
 }
-
 section img {
     width: 100%;
     height: 250px;
@@ -86,60 +65,13 @@ section img {
     display: block;
     position: relative;
 }
-
-/*
-nav {
-    position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 10;
-}
-
-nav ul {
-    display: flex;
-    justify-content: center;
-}
-
-nav ul {
-    background-color: rgba(239, 167, 0, 0.452);
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    border-radius: 5px;
-    width: fit-content;
-    margin: auto;
-}
-
-nav ul li {
-    list-style: none;
-    margin: 2px 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    font-size: 1.2em;
-    color: black;
-    font-weight: bold;
-    display: block;
-    transition: background 0.5s ease-in-out;
-
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-    background-color: rgb(255, 94, 77);
-    color: rgb(239, 166, 0);
-}
-    */
-
-#sobre {
+.secao {
    display: block;
    margin: 0 auto;
    padding-left: 0px;
 }
-
-#sobre h2 {
-    margin-bottom: 15px;
+.secao h2 {
+    margin-bottom: 10px;
     font-size: 1.8em;
     text-align: center;
     background-color: rgba(230, 44, 41, 0.525);
@@ -148,19 +80,41 @@ nav ul li a:hover {
     display: inline-block;
     border-radius: 5px;
 }
-
-#sobre p {
+.secao p {
     text-align: justify;
     line-height: 1.5;
 }
-
-.sobre-conteudo {
+.secao-conteudo {
     max-width: 800px;
     margin: 0 auto;
     text-align: justify;
 }
-
-.sobre-conteudo p {
+.secao-conteudo p {
     margin-bottom: 15px;
     line-height: 1.5;
+    text-align: justify;
+}
+.secao-conteudo p a {
+    color: black;
+    text-decoration: none;
+}
+.secao-conteudo p a:hover {
+    text-decoration: underline;
+    color: blue;
+}
+.subtitulo {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    text-align: justify;
+    max-width: 800px;
+    margin: 0 auto;
+}
+.subtitulo h3 {
+    margin: 0;
+    font-size: 1.4em;
+}
+.subtitulo {
+    margin: 0;
+    flex: 1;
 }
