--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,120 +1,123 @@
 @charset "UTF-8";
 * {
-    margin: 0;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body {
-    background-color: blanchedalmond;
-    overflow-x: hidden;
+  background-color: blanchedalmond;
+  overflow-x: hidden;
 }
 .baskervville-regular {
-    font-family: "Baskervville", serif;
-    font-weight: 400;
-    font-style: normal;
-} 
+  font-family: "Baskervville", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .baskervville-regular-italic {
-    font-family: "Baskervville", serif;
-    font-weight: 400;
-    font-style: italic;
+  font-family: "Baskervville", serif;
+  font-weight: 400;
+  font-style: italic;
 }
 .dancing-script {
-    font-family: "Dancing Script", cursive;
-    font-optical-sizing: auto;
-    font-weight: weight;
-    font-style: normal;
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
 }
 h1 {
-    background-color: rgba(239, 167, 0, 0.452);
-    font-size: 2.2em;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px 20px;
-    position: relative;
-    height: 30px;
+  background-color: rgba(239, 167, 0, 0.452);
+  font-size: 2.2em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px 20px;
+  position: relative;
+  height: 30px;
 }
 .logo {
-    position: absolute;
-    left: 5px;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 45px;
-    width: 45px;
-    border-radius: 50%;
-    object-fit: cover;
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 h1 span {
-    display: inline-block;
-    vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
 }
 h1 img {
-    height: 50px;
-    vertical-align: middle;
+  height: 50px;
+  vertical-align: middle;
 }
 section {
-    position: relative;
+  position: relative;
 }
 section img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    object-position: center 50%;
-    display: block;
-    position: relative;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  object-position: center 50%;
+  display: block;
+  position: relative;
 }
 .secao {
-   display: block;
-   margin: 0 auto;
-   padding-left: 0px;
+  display: block;
+  margin: 0 auto;
+  padding-left: 0px;
 }
 .secao h2 {
-    margin-bottom: 10px;
-    font-size: 1.8em;
-    text-align: center;
-    background-color: rgba(230, 44, 41, 0.525);
-    width: 30%;
-    height: 33px;
-    display: inline-block;
-    border-radius: 5px;
+  margin-bottom: 10px;
+  font-size: 1.8em;
+  text-align: center;
+  background-color: rgba(230, 44, 41, 0.525);
+  width: 30%;
+  height: 33px;
+  display: inline-block;
+  border-radius: 5px;
 }
 .secao p {
-    text-align: justify;
-    line-height: 1.5;
+  text-align: justify;
+  line-height: 1.5;
 }
 .secao-conteudo {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: justify;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: justify;
 }
 .secao-conteudo p {
-    margin-bottom: 15px;
-    line-height: 1.5;
-    text-align: justify;
+  margin-bottom: 15px;
+  line-height: 1.5;
+  text-align: justify;
 }
 .secao-conteudo p a {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 .secao-conteudo p a:hover {
-    text-decoration: underline;
-    color: blue;
+  text-decoration: underline;
+  color: blue;
 }
 .subtitulo {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    text-align: justify;
-    max-width: 800px;
-    margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Deixou o Aula kids no meio*/
+  gap: 15px;
+  text-align: justify;
+  max-width: 800px;
+  margin: 0 auto;
+  flex: 1;
 }
 .subtitulo h3 {
-    margin: 0;
-    font-size: 1.4em;
+  margin: 0;
+  font-size: 1.4em;
+  text-align: center;
 }
 .subtitulo {
-    margin: 0;
-    flex: 1;
-}
+  /*margin: 0; Problema tava aqui nessa linha , margin 0 */
+  /* flex: 1; E não necessidade colocar aqui se tem outra tag ali pra cima igual */
+} /* Depois de ler apaga tudo aqui, ja coloquei pra cima*/
