--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,8 +2,8 @@
 
 * {
     margin: 0;
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 body {
@@ -47,7 +47,8 @@ h1 {
     gap: 10px;
     padding: 10px 20px;
     position: relative;
-    height: 30px;
+    min-height: 50px;
+    height: auto;
 }
 
 .logo {
