--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,7 @@ body {
 .dancing-script {
     font-family: "Dancing Script", cursive;
     font-optical-sizing: auto;
-    font-weight: weight;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -147,13 +147,65 @@ section img {
     font-size: 1.3em;
     display: inline-block;
     filter: opacity(0.6);
-    width: 115px;
+    width: 110px;
     text-align: left;
     padding: 3px;
     line-height: 1;
     border-radius: 5px;
 }
 
+#diminuir {
+    width: 52px;
+}
+
 #prolongar {
-    width: 220px;
+    width: 150px;
+}
+
+#prolongar2 {
+    width: 108px;
+}
+
+#prolongar3{
+    width: 136px;
+}
+
+.tabela-horarios {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 5px;
+}
+
+.tabela-horarios th, .tabela-horarios td {
+    border: 1px solid #999;
+}
+
+.tabela-horarios thead {
+    background-color: rgba(239, 167, 0, 0.452);
+}
+
+.tabela-horarios tbody tr:nth-child(even) {
+    background-color: rgb(239, 239, 239);
+}
+
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+    padding: 15px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.galeria img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.galeria img:hover {
+    transform: scale(1.05);
 }
