--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) { /* Telas pequenas (Celulares) */
     header h1 {
         font-size: 1.2em;
     }
@@ -26,4 +26,64 @@
         font-size: 1.2em;
     }
 
+}
+
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+
+    body {
+        padding: 10px;
+        font-size: 1em;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: center;
+        padding: 15px;
+        text-align: center;
+    }
+
+    .logo {
+        width: 50px;
+        height: 50px;
+    }
+
+    section img {
+        width: 100%;
+        height: auto;
+        max-height: 100px;
+        object-fit: cover;
+    }
+
+    .galeria {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
+
+    .galeria img {
+        width: 100%;
+        height: auto;
+    }
+
+    .tabela-horarios {
+        font-size: 0.9em;
+        overflow-x: auto;
+    }
+
+    form {
+        max-width: 90%;
+        margin: 0 auto;
+    }
+
+    .botoes-form {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    footer {
+        font-size: 0.9em;
+        padding: 15px;
+        text-align: center;
+    }
 }
