--- a/estilos/style.css
+++ b/estilos/style.css
@@ -78,7 +78,8 @@ section {
 
 section img {
     width: 100%;
-    height: 250px;
+    height: calc(15vw + 40px);
+    max-height: 250px;
     object-fit: cover;
     object-position: center 50%;
     display: block;
