--- a/estilos/style.css
+++ b/estilos/style.css
@@ -205,6 +205,7 @@ section img {
     border-radius: 10px;
     transition: transform 0.3s ease;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 
 .galeria img:hover {
@@ -236,6 +237,19 @@ section img {
 .modal-content:hover {
     cursor: zoom-in;
     opacity: 0.9;
+}
+
+.zoom {
+    transform: scale(1.8);
+    transition: transform 0.3s ease;
+    cursor: zoom-out;
+}
+
+#imgModal {
+    transition: transform 0.3s ease;
+    cursor: zoom-in;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .nav {
