--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,89 +1,96 @@
-@media screen and (max-width: 600px) { /* Telas pequenas (Celulares) */
-    header h1 {
-        font-size: 1.2em;
-    }
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+  /* Telas Grandes*/
+  body {
+    padding: 10px;
+    font-size: 1em;
+  }
 
-    section img {
-        height: 70px;
-    }
+  header {
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    text-align: center;
+  }
 
-    .secao h2 {
-        width: 90%;
-        font-size: 1.2em;
-        
-    }
+  .logo {
+    width: 50px;
+    height: 50px;
+  }
 
-    .secao-conteudo {
-        padding-inline: 15px;
-    }
+  section img {
+    width: 100%;
+    height: auto;
+    max-height: 100px;
+    object-fit: cover;
+  }
 
-    .subtitulo {
-        padding-left: 15px;
-        flex-direction: column;
-    }
+  .galeria {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
 
-    .secao h2.baskervville-regular-italic {
-        font-size: 1.2em;
-    }
+  .galeria img {
+    width: 100%;
+    height: auto;
+  }
 
+  .tabela-horarios {
+    font-size: 0.9em;
+    overflow-x: auto;
+  }
+
+  form {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+
+  .botoes-form {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  footer {
+    font-size: 0.9em;
+    padding: 15px;
+    text-align: center;
+  }
 }
 
-@media screen and (min-width: 600px) and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
+  /* Telas Médias*/
+  header h1 {
+    font-size: 1.2em;
+  }
 
-    body {
-        padding: 10px;
-        font-size: 1em;
-    }
+  section img {
+    height: 70px;
+  }
 
-    header {
-        flex-direction: column;
-        align-items: center;
-        padding: 15px;
-        text-align: center;
-    }
+  .secao h2,
+  .secao h2.baskervville-regular-italic {
+    width: 90%;
+    font-size: 1.2em;
+  }
 
-    .logo {
-        width: 50px;
-        height: 50px;
-    }
+  .secao-conteudo {
+    padding-inline: 15px;
+  }
 
-    section img {
-        width: 100%;
-        height: auto;
-        max-height: 100px;
-        object-fit: cover;
-    }
+  .subtitulo {
+    padding-left: 15px;
+    flex-direction: column;
+  }
+}
 
-    .galeria {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
-    }
-
-    .galeria img {
-        width: 100%;
-        height: auto;
-    }
-
-    .tabela-horarios {
-        font-size: 0.9em;
-        overflow-x: auto;
-    }
-
-    form {
-        max-width: 90%;
-        margin: 0 auto;
-    }
-
-    .botoes-form {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    footer {
-        font-size: 0.9em;
-        padding: 15px;
-        text-align: center;
-    }
+@media screen and (max-width: 350px) {
+  /* Tela Menores (iphone 5) */
+  section img {
+    height: 150px;
+    min-height: 150px;
+    max-height: 150px;
+    object-fit: cover;
+    object-position: center center;
+  }
 }
