--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,6 +2,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
@@ -80,7 +81,7 @@ section img {
   height: calc(15vw + 40px);
   max-height: 250px;
   object-fit: cover;
-  object-position: center 50%;
+  object-position: center 2%;
   display: block;
   position: relative;
 }
